last changes in 1.1

--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,7 @@ declare the sources these contents are based on,
 and present some notational conventions.
 In Section~\ref{sec:fundamentals}, we will discuss some basic fundamentals
 that frame the work we want to accomplish.
-There, we will clarify our notion of statistical inference using parametric models,
+There, we will describe the basics of statistical inference using parametric models,
 and give a brief introduction to the Bayesian approach to statistical inference. %based on the Bayesian paradigm.
 Section~\ref{sec:commoncause} then presents a motivating example,
 %illustrating the need to go beyond usual Baysian inference
@@ -29,10 +29,10 @@ focussing on model behaviour in case of prior-data conflict.
 \medskip
 
 With the fundamentals of Bayesian inference based on parametric distributions and conjugate priors
-covered in Section~\ref{sec:fundamentals} %\ref{sec:bayes-inference},
+covered in Section~\ref{sec:fundamentals}, %\ref{sec:bayes-inference},
 a motivating example in Section~\ref{sec:commoncause},
 considering the reliability analysis problem of common-cause failure modelling,
-serves to show the possibilities of generalised Bayesian inference using sets of conjugate priors.
+serves to show the potential of generalised Bayesian inference using sets of conjugate priors.
 
 Chapter~\ref{cha:gbi} then gives a general introduction to the methodology of imprecise probability models,
 presenting the general approach to generalised Bayesian inference with lower previsions or sets of priors.
@@ -42,28 +42,29 @@ are the central topics guiding our assessments of the specific imprecise probabi
 in Chapter~\ref{cha:imprecisebayes-conjugate}.
 
 There, we first present a general framework for generalised Bayesian inference using sets of conjugate priors,
-giving a superstructure for a number of imprecise probability models
-that have been central to the development and application of imprecise probability methods
+giving a superstructure for some notable imprecise probability models
+which have been central to the development and application of imprecise probability methods
 in statistical inference (Section~\ref{sec:generalmodel}).
 Some important favourable inference properties for these models are demonstrated, 
-and a range of models that can be subsumed under this framework are discussed with respect to
+and a number of models that can be subsumed under this framework are discussed with respect to
 the handling of prior-data conflict and the possibility to model weak prior information.
 
 Section~\ref{sec:alternatives} briefly discusses some alternative models based on sets of priors,
-and compares these to models in the framework from Section~\ref{sec:generalmodel}.
+and compares these to models of the framework from Section~\ref{sec:generalmodel}.
 The remainder of Chapter~\ref{cha:imprecisebayes-conjugate}
 reproduces two works that suggest novel models
 that provide a sophisticated handling of prior-data conflict
 (Sections~\ref{sec:jstp} and \ref{sec:isipta11}),
-while Section~\ref{sec:luck} gives a short overview on a software implementation.
+and gives a short overview on a software implementation (Section~\ref{sec:luck}).
 
 Chapter~\ref{cha:concluding} concludes the thesis,
 giving a summary and discussion of the central achievments,
 and sketching some opportunities for applications and avenues for further research.
 
-As supplemental material, the Appendix (Chapter~\ref{cha:appendix}) contains
-a study of \pdc\ sensitivity in Bayesian linear regression,
-and an informal rationale, together with some first technical results,
+The Appendix (Chapter~\ref{cha:appendix}) provides some supplemental material. 
+Section~\ref{sec:festschrift} studies \pdc\ sensitivity in Bayesian linear regression,
+while Section~\ref{sec:boatshape} describes
+an informal rationale and some first technical results
 for a novel approach that, in addition to prior-data conflict sensitivity,
 leads to favourable behaviour in case of strong agreement between prior information and data.
 
@@ -162,7 +163,7 @@ In \textbf{Chapter~\ref{cha:intro}},
 %except Sec.~\ref{sec:diri-multi}, which is based on \textcite{Walter2012b}.
 Section~\ref{sec:fundamentals} is based on \textcite{itip-statinf},
 using \S\S 1.1--1.5 and \S 4.1.
-Section~\ref{sec:diri-multi}, which is based on \textcite{Walter2012b}.
+Section~\ref{sec:diri-multi} is instead based on \textcite{Walter2012b}.
 %
 %Sec.~\ref{sec:inferencetasks}: parts of \cite{itip-statinf}
 %Sec.~\ref{sec:beta-binom}: parts of \cite{itip-statinf}
@@ -179,17 +180,17 @@ except Section~\ref{sec:commoncause-motivation}, which was newly written for thi
 
 In \textbf{Chapter~\ref{cha:gbi}},
 Section~\ref{sec:ip-intro} was newly written for this thesis,
-except Section~\ref{sec:imprecisebayes}, which is based on \textcite[\S 4.2]{itip-statinf},
-and Section~\ref{sec:updating}, which is based on parts of \textcite[\S 4.4]{itip-statinf}.
+except Section~\ref{sec:imprecisebayes}, which is based on \textcite[\S\S 4.2, 4.4]{itip-statinf}.
+%and Section~\ref{sec:updating}, which is based on parts of \textcite[\S 4.4]{itip-statinf}.
 %where the latter was mainly written by Thomas Augustin.
-Also, Section~\ref{sec:ip-related} uses parts of \textcite[\S 5.2]{itip-statinf} and \textcite[\S 6.1]{itip-statinf}.
+Also, Section~\ref{sec:ip-related} uses parts of \textcite[\S 5.2]{itip-statinf}, and \textcite[\S 6.1]{itip-statinf}.
 %
-Sec.~\ref{sec:motivation} was newly devised for this thesis,
+Section~\ref{sec:motivation} was newly devised for this thesis,
 under use of \textcite[\S 2.3]{itip-statinf}
-for the last paragraph in Sec.~\ref{sec:motivation:bayesian-foundational},
+for the last paragraph in Section~\ref{sec:motivation:bayesian-foundational},
 and Sections~\ref{sec:motivation:near-ignorance} and \ref{sec:motivation:pdc}.
 %
-Section~\ref{sec:ip-alternatives} uses parts of \textcite[\S 2.2, 2.4]{itip-statinf},
+Section~\ref{sec:ip-alternatives} uses parts of \textcite[\S\S 2.2, 2.4]{itip-statinf},
 and a paragraph from \textcite[\S 7]{itip-statinf}.
 
 \medskip
@@ -198,29 +199,28 @@ In \textbf{Chapter~\ref{cha:imprecisebayes-conjugate}},
 Section~\ref{sec:generalmodel} is based on \textcite[\S 4.3]{itip-statinf}.
 %which was written primarily by Gero Walter.
 Section~\ref{sec:alternatives} was newly written for this thesis,
-using some very minor parts of \textcite[\S 4.2, \S 4.4]{itip-statinf}.
+using some minor parts of \textcite[\S\S 4.2, 4.4]{itip-statinf}.
 Section~\ref{sec:jstp} is a slightly abriged reproduction of \textcite{Walter2009a},
-with a minor change of notation towards the one introduced in Section~\ref{sec:regularconjugates}
-(most importantly, writing $\nn$ and $\yn$ for the canonical posterior parameters
-instead of $n^{(1)}$ and $y^{(1)}$, respectively).
+with a minor change of notation towards the one introduced in Section~\ref{sec:regularconjugates}.
 %This paper was the result of a collaborative work, where both authors contributed
 %more or less in equal parts. While Gero Walter contributed central concepts and basic ideas,
 %along with the theoretical results, Thomas Augustin devised most of the structure,
 %and contributed most of the introductory and concluding sections.
 %
 Section~\ref{sec:luck} gives a short overview on a software implementation
-of the model presented in Section~\ref{sec:jstp}.
-Author and maintainer of this add-on package \texttt{luck} \parencite{luck-package} is Gero Walter,
-with Norbert Krautenbacher as a second author, who contributed code for an application
-to exponentially distributed data.
+of the model presented in Section~\ref{sec:jstp},
+and was newly written for this thesis.
+%Author and maintainer of this add-on package \texttt{luck} \parencite{luck-package} is Gero Walter,
+%with Norbert Krautenbacher as a second author, who contributed code for an application
+%to exponentially distributed data.
 %
 Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
 again with a slight change of notation for consistency with the rest of the material presented in this thesis.
-Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
+%Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
 %All three authors worked collaboratively on the work as whole but with emphasis on different parts.
 %Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
 %while Section~\ref{sec:weightedinf} was devised and written primarily by Frank Coolen.
-Here, it was possible to add a few explanatory paragraphs
+Here, it was also possible to add a few explanatory paragraphs
 that could not appear in the original publication due to page restrictions. 
 %Thomas Augustin contributed substantially to all parts of the manuscript,
 %especially in the introductory and concluding sections.
