--- a/jstp.tex
+++ b/jstp.tex
@@ -105,7 +105,7 @@ strong arguments for a plurality of learning rules,%
 \footnote{\label{foot:learningrules}See, e.g.,
 \textcite{2009:Coolen:Augustin}, \textcite{2007:weichselberger}, \textcite{2007a:cattaneo},
 \textcite{2007:held}, \textcite{2007:held-isipta07}, \textcite{2009:Coolen:Augustin},
-\textcite{2004:augustin:coolen}, and \textcite{2003:augustin}.
+\textcite{2004:augustin}, and \textcite{2003:augustin}.
 We discuss some of these approaches in Section~\ref{sec:alternatives},
 and the critical aspects of the Generalised Bayes' Rule discussed in others in Section~\ref{sec:updating}
 and again in Section~\ref{sec:concluding-outlook}.} we
