--- a/talk/talk.tex
+++ b/talk/talk.tex
@@ -649,6 +649,7 @@ p(\psib\mid\nzg,\yzr,\vec{x})
 
 }
 
+\iffalse
 \frame{\frametitle{Canonical Conjugate Priors}
 
 \vspace*{-2ex}%
@@ -682,6 +683,7 @@ posterior:       & $\mu\mid\nng,\ynr$ & $\sim$ & $\norm(\ynr, 1/\nng)$ \quad ($\
 \end{tabular}
 \end{block}}
 }
+\fi
 
 \subsection{Sets of Priors}
 
