talk-durham: boatgraph, smal tweaks

--- a/talk/talk-durham0913.tex
+++ b/talk/talk-durham0913.tex
@@ -293,7 +293,7 @@ P = \E[\theta\mid\nng,\ynr]
 
 \hspace*{-12ex}
 \begin{columns}%[T]
-\begin{column}{0.58\textwidth}
+\begin{column}{0.55\textwidth}
 \begin{tikzpicture}
 \pgftransformscale{0.025}
 \uncover<1>{
@@ -312,7 +312,7 @@ P = \E[\theta\mid\nng,\ynr]
 }
 \end{tikzpicture}
 \end{column}
-\begin{column}{0.42\textwidth}
+\begin{column}{0.45\textwidth}
 \uncover<1->{%
 \begin{block}{no conflict:}
 prior $\nzg = 8$, $\yzr = 0.75$\\
@@ -445,8 +445,8 @@ on the degree of prior-data conflict in most cases.}\\[1.5ex]
 
 \then\ How to express the precision of a probability statement?\\
 \pause
-\hspace*{6ex}\fbox{\parbox[t]{0.9\textwidth}{add \alert{imprecision} as new model dimension:\\
-\alert{sets of priors} model uncertainty about probability statements}}
+\hspace*{6ex}\parbox[t]{0.9\textwidth}{\textbf{add \alert{imprecision} as new model dimension:\\
+\alert{sets of priors} model uncertainty in probability statements}}
 
 }
 
@@ -672,7 +672,7 @@ Walley (1991, \S 5.4.3),\\ \emph{generalised iLUCK-models} (Walter \& Augustin 2
 \frame{\frametitle{Parameter Set Shapes: Discussion}
 
 \begin{itemize}%[<+->]
-\item<1-> Need a range of $\nzg$ values for \pdc\ reaction
+\item<1-> A range of $\nzg$ values is needed for \pdc\ reaction
 \item<2-> Other set shapes are possible, but may be more difficult to elicit
 \item<3-> Prior information may be such that range of $\yzr$ changes with $\nzg$ (or vice versa)
 \item<4-> \emph{Near-ignorance priors}: $\PZc$ such that prior inferences are nearly \emph{vacuous},
@@ -701,7 +701,7 @@ via a different parametrisation of priors suggested by Mi\c{k} Bickis % (in prep
 \uncover<2->{%
 %\vspace*{-7ex}%
 \begin{center}
-\includegraphics[trim = 15mm 45mm 25mm 60mm, clip, width=\textwidth]{../R/boatshape-posterior-normal} %[scale=0.63]
+\includegraphics[trim = 15mm 45mm 25mm 60mm, clip, width=\textwidth]{../R/boatshape-durham0913} %[scale=0.63]
 \end{center}}
 
 }
