talk-durham: 44 min version

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -335,6 +335,16 @@
     Year = {2012},
 }
 
+@article{2012:benavolizaffalon-short,
+    Author = {A. Benavoli and M. Zaffalon},
+    Doi = {10.1016/j.jspi.2012.01.023},
+    Journal = {Journal of Statistical Planning and Inference},
+    Pages = {1960--1979},
+    Title = {A model of prior ignorance for inferences in the one-parameter exponential family},
+    Volume = {142},
+    Year = {2012},
+}
+
 @book{1999:rueger,
     Address = {M\"{u}nchen, Wien},
     Author = {B. R\"{u}ger},
